--- a/Doodles/Unseeded_region_growing.ipynb
+++ b/Doodles/Unseeded_region_growing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 32,
    "metadata": {
     "collapsed": true
    },
@@ -21,23 +21,24 @@
    "source": [
     "# unseeded region growing\n",
     "\n",
-    "from Functions import functions as f\n",
     "import skimage.io as sk\n",
     "import numpy as np\n",
+    "from Functions import image_processing as ip\n",
+    "from Functions import seeded_region_growing as srg\n",
+    "from Functions import unseeded_region_growing as urg\n",
     "\n",
-    "img = sk.imread(\"../Data/N2DH-GOWT1/img/t01.tif\")\n",
-    "img_r = f.img_resize(img, 500, 500)\n",
-    "f.show_image(img_r, 15, 8)\n"
+    "image = sk.imread(\"../Data/N2DH-GOWT1/img/t01.tif\")\n",
+    "img_r = ip.img_resize(image, 500, 500)\n",
+    "ip.show_image(img_r, 15, 8)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "outputs": [],
    "source": [
     "# Region Array\n",
-    "# List with neighbours\n",
-    "Ne_total = []\n",
+    "\n",
     "regions = np.zeros(img_r.shape) # array with region number\n",
     "regions[0,0] = 1 # Startpixel is region number 1"
    ],
@@ -50,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 33,
    "outputs": [
     {
      "name": "stdout",
@@ -61,31 +62,10 @@
     }
    ],
    "source": [
-    "def unseeded_find_neighbors(img, regions):\n",
-    "    Ne = []\n",
-    "    for p in np.ndindex(img.shape):\n",
-    "        if regions[p] != 0: # Pixels with region\n",
-    "            if p[0] > 0: # Add neighbours to list T, up\n",
-    "                a = (p[0]-1, p[1])\n",
-    "                if regions[a] == 0: # Nachbar darf noch keine Region haben\n",
-    "                    Ne.append(a)\n",
-    "            if p[0] < img.shape[0] - 1: # Add neighbours to list T, down\n",
-    "                b = (p[0]+1, p[1])\n",
-    "                if regions[b] == 0: # Nachbar darf noch keine Region haben\n",
-    "                    Ne.append(b)\n",
-    "            if p[1] > 0: # Add neighbours to list T, left\n",
-    "                c = (p[0], p[1]-1)\n",
-    "                if regions[c] == 0: # Nachbar darf noch keine Region haben\n",
-    "                    Ne.append(c)\n",
-    "            if p[1] < img.shape[1] - 1: # Add neighbours to list T, right\n",
-    "                d = (p[0], p[1]+1)\n",
-    "                if regions[d] == 0: # Nachbar darf noch keine Region haben\n",
-    "                    Ne.append(d)\n",
-    "    return Ne\n",
+    "# Unseeded find neighbors\n",
     "\n",
-    "Ne_total = Ne_total + unseeded_find_neighbors(img_r, regions)\n",
-    "print(Ne_total)\n",
-    "\n"
+    "ne = srg.find_neighbors(regions)\n",
+    "print(ne)"
    ],
    "metadata": {
     "collapsed": false,
@@ -96,33 +76,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "outputs": [
     {
-     "data": {
-      "text/plain": "[0.0]"
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.0]\n"
+     ]
     }
    ],
    "source": [
-    "def unseeded_mean_region(img, regions):\n",
-    "    mean = []\n",
-    "    region_max = int(max(regions.flatten()))\n",
-    "    for count in range(1,region_max + 1):\n",
-    "        region_pixel = []\n",
-    "        intensity = []\n",
-    "        for p in np.ndindex(img.shape):\n",
-    "            if regions[p] == count:\n",
-    "                region_pixel.append(p)\n",
-    "        for l in region_pixel:\n",
-    "            intensity.append(img[l])\n",
-    "        mean.append(sum(intensity)/len(intensity))\n",
-    "    return mean\n",
+    "# Unseeded mean region\n",
     "\n",
-    "unseeded_mean_region(img_r, regions)"
+    "print(urg.unseeded_mean_region(img_r, regions))\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -133,36 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "outputs": [],
-   "source": [
-    "# Name kann geändert werden, wenn alle Funktionen das gleiche machen\n",
-    "def unseeded_add_neighbors(img, p): #p describes pixel for which neighbors need to be added\n",
-    "    Ne1 = []\n",
-    "    if p[0] > 0: # Add neighbours to list T, up\n",
-    "        a = (p[0]-1, p[1])\n",
-    "        Ne1.append(a)\n",
-    "    if p[0] < img.shape[0]: # Add neighbours to list T, down\n",
-    "        b = (p[0]+1, p[1])\n",
-    "        Ne1.append(b)\n",
-    "    if p[1] > 0: # Add neighbours to list T, left\n",
-    "        c = (p[0], p[1]-1)\n",
-    "        Ne1.append(c)\n",
-    "    if p[1] < img.shape[1]: # Add neighbours to list T, right\n",
-    "        d = (p[0], p[1]+1)\n",
-    "        Ne1.append(d)\n",
-    "    return Ne1"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "outputs": [
     {
      "name": "stdout",
@@ -179,20 +117,9 @@
     }
    ],
    "source": [
-    "def unseeded_distance(img, list, regions): # img intensity values, regions is region number, list is list of neighbours\n",
-    "    means = unseeded_mean_region(img, regions)\n",
-    "    result = np.full(img.shape, 500) # Wert 500 damit berechnete Distanzen immer kleiner sind\n",
-    "    for i in list:\n",
-    "        nei = unseeded_add_neighbors(img, i) # Nachbarn des Pixels\n",
-    "        distance = []\n",
-    "        for j in nei:\n",
-    "            if regions[j] != 0: # Nachbarn mit zugeordneter Region\n",
-    "                distance.append(abs(img[i] - means[int(regions[j] - 1)])) # Distanz Berechnung\n",
-    "        if len(distance) != 0:\n",
-    "            result[i] = min(distance) # Minimale Distanz wird in den array geschrieben\n",
-    "    return result\n",
+    "# Unseeded distance\n",
     "\n",
-    "distance = unseeded_distance(img_r, Ne_total, regions)\n",
+    "distance = urg.unseeded_distance(img_r, ne, regions)\n",
     "print(distance)"
    ],
    "metadata": {
@@ -204,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "outputs": [
     {
      "name": "stdout",
@@ -216,17 +143,9 @@
    ],
    "source": [
     "# z Aussuchen\n",
-    "def unseeded_pixel_pick(distance): # distance ist Ergebnis von unseeded_distance, array mit Distanzen\n",
-    "    pick = []\n",
-    "    min = np.amin(distance) # Minimale Distanz\n",
-    "    for p in np.ndindex(distance.shape): # alle Pixel checken\n",
-    "        if distance[p] == min: # Wenn Distanz minimaler Distanz entspricht\n",
-    "            pick.append(p) # Liste an Pixeln mit minimaler Distanz\n",
-    "        if len(pick) > 0:\n",
-    "            return pick[0] # Erster Pixel wird ausgewählt (haben wir willkürlich festgelegt)\n",
     "\n",
-    "pick = unseeded_pixel_pick(distance)\n",
-    "print(pick)"
+    "picked_pixel = urg.unseeded_pixel_pick(distance)\n",
+    "print(picked_pixel)"
    ],
    "metadata": {
     "collapsed": false,
@@ -237,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "outputs": [
     {
      "name": "stdout",
@@ -257,22 +176,8 @@
     "t = 5 # Threshold ist willkürlich festgesetzt\n",
     "# Regions Zuweisung z\n",
     "# Distanz nochmal berechnen, zu Nachbarn mit region, und der gleichen Region zuweisen\n",
-    "def unseeded_region_direct(img, regions, pick): # pick ist ausgesuchter Pixel\n",
-    "    means = unseeded_mean_region(img, regions)\n",
-    "    nei = unseeded_add_neighbors(img, pick) # Nachbarn des Pixels\n",
-    "    dis = []\n",
-    "    region_number = []\n",
-    "    for j in nei: # Distanz für Nachbarn wird wieder bestimmt\n",
-    "        if regions[j] != 0: # Nachbarn mit zugeordneter Region\n",
-    "            dis.append(abs(img[pick] - means[int(regions[j] - 1)])) # Distanz Berechnung\n",
-    "            region_number.append(regions[j])\n",
-    "    minimum = min(dis) # Minimale Distanz\n",
-    "    for d in range(0, len(dis)):\n",
-    "        if dis[d] == minimum: # Bestimmt Region mit niedrigster Distanz\n",
-    "            regions[pick] = region_number[d] # Regionswert vom nähsten Pixel wird übernommen\n",
-    "    return regions\n",
     "\n",
-    "test = unseeded_region_direct(img_r, regions, pick)\n",
+    "test = urg.unseeded_region_direct(img_r, regions, picked_pixel)\n",
     "\n",
     "print(test)"
    ],
@@ -285,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "outputs": [
     {
      "ename": "ValueError",
@@ -294,46 +199,19 @@
      "traceback": [
       "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
       "\u001B[1;31mValueError\u001B[0m                                Traceback (most recent call last)",
-      "\u001B[1;32m<ipython-input-9-e85b51d46450>\u001B[0m in \u001B[0;36m<module>\u001B[1;34m\u001B[0m\n\u001B[0;32m     16\u001B[0m     \u001B[1;32mreturn\u001B[0m \u001B[0mregions\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     17\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m---> 18\u001B[1;33m \u001B[0mtest3\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0munseeded_region_indirect_or_new\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mimg_r\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mregions\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mpick\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mdistance\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m     19\u001B[0m \u001B[0mprint\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mtest3\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     20\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n",
-      "\u001B[1;32m<ipython-input-9-e85b51d46450>\u001B[0m in \u001B[0;36munseeded_region_indirect_or_new\u001B[1;34m(img, regions, pick, t)\u001B[0m\n\u001B[0;32m      7\u001B[0m         \u001B[0mdis\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mappend\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mabs\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mimg\u001B[0m\u001B[1;33m[\u001B[0m\u001B[0mpick\u001B[0m\u001B[1;33m]\u001B[0m \u001B[1;33m-\u001B[0m \u001B[0mm\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m)\u001B[0m \u001B[1;31m# Alle Abstände zu den Regionen berechnen\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m      8\u001B[0m     \u001B[0mminimum\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mmin\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mdis\u001B[0m\u001B[1;33m)\u001B[0m \u001B[1;31m# Minimale Distanz\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m----> 9\u001B[1;33m     \u001B[1;32mif\u001B[0m \u001B[0mminimum\u001B[0m \u001B[1;33m<\u001B[0m \u001B[0mt\u001B[0m\u001B[1;33m:\u001B[0m \u001B[1;31m# Distanz muss kleiner sein als der Threshold\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m     10\u001B[0m         \u001B[1;32mfor\u001B[0m \u001B[0md\u001B[0m \u001B[1;32min\u001B[0m \u001B[0mrange\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;36m0\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mlen\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mdis\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m:\u001B[0m \u001B[1;31m# Für alle Distanz Werte wir überprüft\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     11\u001B[0m                \u001B[1;32mif\u001B[0m \u001B[0mdis\u001B[0m\u001B[1;33m[\u001B[0m\u001B[0md\u001B[0m\u001B[1;33m]\u001B[0m \u001B[1;33m==\u001B[0m \u001B[0mminimum\u001B[0m\u001B[1;33m:\u001B[0m \u001B[1;31m# Wenn die Distanz gleich dem Minimum ist\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n",
+      "\u001B[1;32m<ipython-input-19-2ec5045925d9>\u001B[0m in \u001B[0;36m<module>\u001B[1;34m\u001B[0m\n\u001B[0;32m      2\u001B[0m \u001B[1;31m# Distanz zu allen Regionen ausrechnen und zu der mit der kleinsten Distanz zuweisen\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m      3\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m----> 4\u001B[1;33m \u001B[0mtest3\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0murg\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0munseeded_region_indirect_or_new\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mimg_r\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mregions\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mpicked_pixel\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mdistance\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m      5\u001B[0m \u001B[0mprint\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mtest3\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m      6\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n",
+      "\u001B[1;32m~\\PycharmProjects\\2021-topic-04-team-04\\Functions\\unseeded_region_growing.py\u001B[0m in \u001B[0;36munseeded_region_indirect_or_new\u001B[1;34m(img, reg, pick, t)\u001B[0m\n\u001B[0;32m    108\u001B[0m         \u001B[0mdis\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mappend\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mabs\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mimg\u001B[0m\u001B[1;33m[\u001B[0m\u001B[0mpick\u001B[0m\u001B[1;33m]\u001B[0m \u001B[1;33m-\u001B[0m \u001B[0mm\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m)\u001B[0m  \u001B[1;31m# Alle Abstände zu den Regionen berechnen\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m    109\u001B[0m     \u001B[0mminimum\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mmin\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mdis\u001B[0m\u001B[1;33m)\u001B[0m  \u001B[1;31m# Minimale Distanz\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m--> 110\u001B[1;33m     \u001B[1;32mif\u001B[0m \u001B[0mminimum\u001B[0m \u001B[1;33m<\u001B[0m \u001B[0mt\u001B[0m\u001B[1;33m:\u001B[0m  \u001B[1;31m# Distanz muss kleiner sein als der Threshold\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m    111\u001B[0m         \u001B[1;32mfor\u001B[0m \u001B[0md\u001B[0m \u001B[1;32min\u001B[0m \u001B[0mrange\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;36m0\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mlen\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mdis\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m:\u001B[0m  \u001B[1;31m# Für alle Distanz Werte wir überprüft\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m    112\u001B[0m             \u001B[1;32mif\u001B[0m \u001B[0mdis\u001B[0m\u001B[1;33m[\u001B[0m\u001B[0md\u001B[0m\u001B[1;33m]\u001B[0m \u001B[1;33m==\u001B[0m \u001B[0mminimum\u001B[0m\u001B[1;33m:\u001B[0m  \u001B[1;31m# Wenn die Distanz gleich dem Minimum ist\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n",
       "\u001B[1;31mValueError\u001B[0m: The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()"
      ]
     }
    ],
    "source": [
     "# Zu nächst ähnlicher Region zuweisen\n",
-    "# Distanz zu allen Regionen ausrechnene und zu der mit der kleinsten Distanz zuweisen\n",
-    "def unseeded_region_indirect_or_new(img, regions, pick,t):\n",
-    "    means = unseeded_mean_region(img, regions)  # Mittelwerte Regionen\n",
-    "    dis = []\n",
-    "    for m in means:\n",
-    "        dis.append(abs(img[pick] - m)) # Alle Abstände zu den Regionen berechnen\n",
-    "    minimum = min(dis) # Minimale Distanz\n",
-    "    if minimum < t: # Distanz muss kleiner sein als der Threshold\n",
-    "        for d in range(0, len(dis)): # Für alle Distanz Werte wir überprüft\n",
-    "               if dis[d] == minimum: # Wenn die Distanz gleich dem Minimum ist\n",
-    "                    regions[pick] = d + 1 # Letzte Region mit minimalem Wert\n",
-    "        else:# Definition einer neuen Region, wenn keine passende gefunden wurde\n",
-    "           region_max = int(max(regions.flatten())) # Aktuell höchste Regionsnummer\n",
-    "           regions[pick] = region_max + 1 # Neuer Regionswert für Pixel pick\n",
-    "    return regions\n",
+    "# Distanz zu allen Regionen ausrechnen und zu der mit der kleinsten Distanz zuweisen\n",
+    "# Fehlermeldung hier ist okay, da Pixel wie oben zugeordnet wird\n",
     "\n",
-    "test3 = unseeded_region_indirect_or_new(img_r, regions, pick, distance)\n",
+    "test3 = urg.unseeded_region_indirect_or_new(img_r, regions, picked_pixel, distance)\n",
     "print(test3)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -361,19 +239,19 @@
     "Differenz von allen Pixeln in Liste Ne_total zu allen deren angrenzenden Regionen berechnen\n",
     "Pixel mit kleinstem Wert wird zu Pixel z\n",
     "\n",
-    "Differenz von z zu Ai wird mit einem treshold t (wie bestimmen) verglichen\n",
-    "Wenn kleienr als t, z wird zu Region hinzugefügt\n",
+    "Differenz von z zu Ai wird mit einem threshold t (wie bestimmen) verglichen,\n",
+    "wenn kleiner als t, z wird zu Region hinzugefügt\n",
     "\n",
     "Wenn größer, suchen wie die ähnlichste Region, egal ob angrenzend oder nicht\n",
-    "Vergleich der minimalen Differenz mit treshold t, wenn kleiner wird z dieser Region zugewiesen\n",
+    "Vergleich der minimalen Differenz mit threshold t, wenn kleiner wird z dieser Region zugewiesen\n",
     "\n",
     "Wenn größer, Pixel z wir eine neue Region\n",
     "\n",
     "Aktualisierung Listen Ai\n",
     "\n",
-    "Nachbarn bestimmen, Liste T ...\n",
+    "Nachbarn bestimmen, Liste T und so weiter\n",
     "\n",
-    "Verschnellerung: Nur die Differenzen neu berechnen der erweiterten Region\n"
+    "Schneller: Nur die Differenzen neu berechnen der erweiterten Region\n"
    ],
    "metadata": {
     "collapsed": false,
