--- a/Seeded_Region_Growing.ipynb
+++ b/Seeded_Region_Growing.ipynb
@@ -2759,6 +2759,45 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "def calculate_regions_size(regions):\n",
+    "    max_region = np.amax(regions)\n",
+    "    region_sizes = []\n",
+    "    for region_number in range(0, max_region):\n",
+    "        region_count = np.sum(regions == region_number)\n",
+    "        region_sizes.append(region_count)\n",
+    "    return region_sizes\n",
+    "\n",
+    "def find_neighboring_regions(regions, img, region_number):\n",
+    "    regions = regions.astype(int)\n",
+    "    pixel_of_region = np.where(regions == region_number)\n",
+    "    pixel_of_region = list(zip(pixel_of_region[0], pixel_of_region[1]))\n",
+    "\n",
+    "    neighboring_regions = []\n",
+    "    for pixel in pixel_of_region:\n",
+    "        four_neighbors = srg.get_neighbors(img, pixel)\n",
+    "        for neighbor in four_neighbors:\n",
+    "            if regions[neighbor] != region_number and regions[neighbor] not in neighboring_regions:\n",
+    "                neighboring_regions.append(regions[neighbor])\n",
+    "\n",
+    "def find_most_similar_region(regions, img, means, neighboring_regions):\n",
+    "    region_count = len(neighboring_regions)\n",
+    "    distances = np.ndarray(region_count)\n",
+    "    distances[0:region_count] =\n",
+    "\n",
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": 10,
    "outputs": [
     {
@@ -4200,7 +4239,7 @@
     }
    ],
    "source": [
-    "#Wo wird img_r überschrieben???\n",
+    "## Wo wird img_r überschrieben???\n",
     "\n",
     "test = distance_merging_while(img_r, 0.1, img_small)\n",
     "print(test)\n",
