--- a/seeded_region_growing_version2.ipynb
+++ b/seeded_region_growing_version2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -13,10 +13,10 @@
     "from Functions import image_processing as ip\n",
     "from Functions import seed_detection as sd\n",
     "\n",
-    "def add_border(array):\n",
-    "    array_with_border = np.zeros((array.shape[0]+2, array.shape[1]+2))\n",
-    "    array_with_border[1:array.shape[0]+1, 1:array.shape[1]+1] = array\n",
-    "    return array_with_border\n",
+    "#def add_border(array):\n",
+    "#    array_with_border = np.zeros((array.shape[0]+2, array.shape[1]+2))\n",
+    "#    array_with_border[1:array.shape[0]+1, 1:array.shape[1]+1] = array\n",
+    "#    return array_with_border\n",
     "\n",
     "def calculate_left_neighbors(reg, seeds):\n",
     "    left_neighbors = np.zeros((reg.shape[0], reg.shape[1]+1))\n",
@@ -57,33 +57,6 @@
     "    bottom_neighbors = calculate_bottom_neighbors(reg, seeds)\n",
     "\n",
     "    return left_neighbors, right_neighbors, top_neighbors, bottom_neighbors\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "def get_neighbors(img, p):\n",
-    "    \"\"\"\n",
-    "    Find maximal 4 direct neighbors of pixels, ignores border\n",
-    "\n",
-    "    :param img: image with intensity values (2D array)\n",
-    "    :param p: pixel for which the neighbors should be found (tuple with position)\n",
-    "    :return: list of maximal four neighbors (list)\n",
-    "    \"\"\"  # p describes pixel for which neighbors need to be added\n",
-    "    neighbors = []\n",
-    "    if p[0] > 0:  # Add neighbours to list T, up\n",
-    "        a = (p[0] - 1, p[1])\n",
-    "        neighbors.append(a)\n",
-    "    if p[0] < img.shape[0] - 1:  # Add neighbours to list T, down\n",
-    "        b = (p[0] + 1, p[1])\n",
-    "        neighbors.append(b)\n",
-    "    if p[1] > 0:  # Add neighbours to list T, left\n",
-    "        c = (p[0], p[1] - 1)\n",
-    "        neighbors.append(c)\n",
-    "    if p[1] < img.shape[1] - 1:  # Add neighbours to list T, right\n",
-    "        d = (p[0], p[1] + 1)\n",
-    "        neighbors.append(d)\n",
-    "    return neighbors\n",
     "\n",
     "\n",
     "def mean_region(img, reg):\n",
@@ -142,10 +115,10 @@
     "    means = update_list_of_means(means, img, reg, new_pixel)\n",
     "    max_intensity = np.amax(img)\n",
     "\n",
-    "    left_distances = update_distance(img, reg, max_intensity, new_pixel, left_neighbors, left_distances)\n",
-    "    right_distances = update_distance(img, reg, max_intensity, new_pixel, right_neighbors, right_distances)\n",
-    "    top_distances = update_distance(img, reg, max_intensity, new_pixel, top_neighbors, top_distances)\n",
-    "    bottom_distances = update_distance(img, reg, max_intensity, new_pixel, bottom_neighbors, bottom_distances)\n",
+    "    left_distances = update_distance(img, reg, means, max_intensity, new_pixel, left_neighbors, left_distances)\n",
+    "    right_distances = update_distance(img, reg, means, max_intensity, new_pixel, right_neighbors, right_distances)\n",
+    "    top_distances = update_distance(img, reg, means, max_intensity, new_pixel, top_neighbors, top_distances)\n",
+    "    bottom_distances = update_distance(img, reg, means, max_intensity, new_pixel, bottom_neighbors, bottom_distances)\n",
     "\n",
     "    return left_distances, right_distances, top_distances, bottom_distances\n",
     "\n",
@@ -159,12 +132,6 @@
     "\n",
     "def is_labeled(reg, position):\n",
     "    if reg[position] != 0:\n",
-    "        return True\n",
-    "    return False\n",
-    "\n",
-    "\n",
-    "def pixel_in_new_region(reg, neighbor_position, new_pixel):\n",
-    "    if reg[neighbor_position] == reg[new_pixel]:\n",
     "        return True\n",
     "    return False\n",
     "\n",
@@ -208,7 +175,7 @@
     "    pos_min_dist_return = position_of_smallest_distance(left_distances, right_distances, top_distances, bottom_distances)\n",
     "    pos_min_dist = pos_min_dist_return[0]\n",
     "    border_number = pos_min_dist_return[1]\n",
-    "    one_border_neighbors = choose_border_number(border_number, left_distances, right_distances, top_distances, bottom_distances, left_neighbors, right_neighbors, top_neighbors, bottom_neighbors)\n",
+    "    one_border_neighbors = choose_border_number(border_number, left_neighbors, right_neighbors, top_neighbors, bottom_neighbors)\n",
     "\n",
     "    reg[pos_min_dist] = one_border_neighbors[pos_min_dist]\n",
     "\n",
@@ -252,88 +219,86 @@
     "    return bottom_neighbors\n",
     "\n",
     "\n",
-    "\n",
-    "def label(reg, dis, nearest_reg,\n",
-    "          neighbors):\n",
-    "    \"\"\"\n",
-    "    labels one pixel (nearest pixel to one of the regions)\n",
-    "    :param reg: region numbers (2d array of ints)\n",
-    "    :param dis: distances to nearest neighboring region (2d array)\n",
-    "    :param nearest_reg: number of nearest neighboring region (2d array)\n",
-    "    :param neighbors: list of to be labeled pixels (list of tuples (x,y))\n",
-    "\n",
-    "    :return: reg: updated regions of pixels (2d array)\n",
-    "    :return: pos_min_dist: position of newly labeled pixel (tuple (x,y))\n",
-    "    :return: neighbors: updated list of pixels to be labeled\n",
-    "    :return: dis: updated distances to nearest region (2d array)\n",
-    "    \"\"\"\n",
-    "\n",
-    "    pos_min_dist = position_of_smallest_distance(dis)\n",
-    "    reg[pos_min_dist] = nearest_reg[pos_min_dist]\n",
-    "    neighbors.remove(pos_min_dist)\n",
-    "    dis[pos_min_dist] = 1\n",
-    "    print(len(neighbors))\n",
-    "    return reg, pos_min_dist, neighbors, dis\n",
-    "\n",
-    "\n",
-    "def position_of_smallest_distance(dis):\n",
-    "    minimal_distances = np.where(dis == np.amin(dis))\n",
-    "    pos_min_dist = list(zip(minimal_distances[0], minimal_distances[1]))[0]\n",
-    "    pos_min_dist = (int(pos_min_dist[0]), int(pos_min_dist[1]))\n",
-    "    return pos_min_dist\n",
-    "\n",
-    "\n",
     "def region_growing(img, reg):\n",
     "    \"\"\"\n",
     "    performs region growing algorithm on image with defined seeds (reg)\n",
-    "    :param img: intensity values (2d array)\n",
-    "    :param reg: region numbers, predefined from seed selection (2d array)\n",
-    "    :return: regions of all pixels, result of seeded region growing (2d array), values start with 1 (ints)\n",
+    "    :param img: intensity value (2d array)\n",
+    "    :param reg: region numbers (2d array)\n",
+    "    :return: labeled image with region numbers (2d array)\n",
     "    \"\"\"\n",
     "\n",
-    "    neighbors = find_neighbors(reg)\n",
-    "    dist = calculation_distance(img, neighbors, reg)\n",
+    "    border_neighbors = find_seed_neighbors(reg)\n",
+    "    left_neighbors = border_neighbors[0]\n",
+    "    right_neighbors = border_neighbors[1]\n",
+    "    top_neighbors = border_neighbors[2]\n",
+    "    bottom_neighbors = border_neighbors[3]\n",
     "\n",
-    "    regions_new = label(reg, dist[0], dist[1], neighbors)\n",
-    "    neighbors = regions_new[2]\n",
-    "    distances = regions_new[3]\n",
-    "    neighbors = add_missing_neighbors(img, regions_new[1], neighbors, reg)\n",
+    "    border_distances = calculate_distances(img, reg, left_neighbors, right_neighbors, top_neighbors, bottom_neighbors)\n",
+    "    means = border_distances[0]\n",
+    "    left_distances = border_distances[1]\n",
+    "    right_distances = border_distances[2]\n",
+    "    top_distances = border_distances[3]\n",
+    "    bottom_distances = border_distances[4]\n",
     "\n",
-    "    while unlabeled_pixel_exist(neighbors):\n",
-    "        dist = new_distance(img, regions_new[0], dist[1], distances, regions_new[1], neighbors,\n",
-    "                            dist[2])\n",
-    "        regions_new = label(regions_new[0], dist[0], dist[1], neighbors)  # labels next pixel\n",
-    "        neighbors = regions_new[2]\n",
-    "        distances = regions_new[3]\n",
-    "        neighbors = add_missing_neighbors(img, regions_new[1], neighbors, reg)\n",
+    "    regions_new = label(reg, left_distances, right_distances, top_distances, bottom_distances, left_neighbors, right_neighbors, top_neighbors, bottom_neighbors)\n",
+    "    reg = regions_new[0]\n",
+    "    pos_min_dist = regions_new[1]\n",
+    "    left_neighbors = regions_new[2]\n",
+    "    right_neighbors = regions_new[3]\n",
+    "    top_neighbors = regions_new[4]\n",
+    "    bottom_neighbors = regions_new[5]\n",
     "\n",
-    "    return regions_new[0]\n",
+    "    while unlabeled_pixel_exist(reg):\n",
+    "        new_distances = update_distances(img, reg, means, pos_min_dist, left_neighbors, right_neighbors, top_neighbors, bottom_neighbors, left_distances, right_distances, top_distances, bottom_distances)\n",
+    "        left_distances = new_distances[0]\n",
+    "        right_distances = new_distances[1]\n",
+    "        top_distances = new_distances[2]\n",
+    "        bottom_distances = new_distances[3]\n",
+    "\n",
+    "        regions_new = label(reg, left_distances, right_distances, top_distances, bottom_distances, left_neighbors, right_neighbors, top_neighbors, bottom_neighbors)\n",
+    "        reg = regions_new[0]\n",
+    "        pos_min_dist = regions_new[1]\n",
+    "        left_neighbors = regions_new[2]\n",
+    "        right_neighbors = regions_new[3]\n",
+    "        top_neighbors = regions_new[4]\n",
+    "        bottom_neighbors = regions_new[5]\n",
+    "\n",
+    "        print(np.count_nonzero(reg == 0))\n",
+    "    return reg\n",
     "\n",
     "\n",
-    "def unlabeled_pixel_exist(neighbors):\n",
-    "    if len(neighbors) > 0:\n",
+    "def unlabeled_pixel_exist(reg):\n",
+    "    if 0 in reg:\n",
     "        return True\n",
-    "    return False\n",
-    "\n",
-    "\n",
-    "def add_missing_neighbors(img, pos_min_dist, neighbors, reg):\n",
-    "    neighbors_to_add = get_neighbors(img, pos_min_dist)  # finds neighbors of newly labeled pixel\n",
-    "    for neighbor in neighbors_to_add:\n",
-    "        if neighbor not in neighbors and not is_labeled(reg, neighbor):\n",
-    "            neighbors.append(neighbor)\n",
-    "    return neighbors"
+    "    return False\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 8,
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "only size-1 arrays can be converted to Python scalars",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mTypeError\u001B[0m                                 Traceback (most recent call last)",
+      "\u001B[1;32m<ipython-input-8-627ffac34b5e>\u001B[0m in \u001B[0;36m<module>\u001B[1;34m\u001B[0m\n\u001B[0;32m      5\u001B[0m \u001B[1;31m#img_result = sd.decrease_region_number(img_result, 50)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m      6\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m----> 7\u001B[1;33m \u001B[0mimg_result\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mregion_growing\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mimg_s\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mimg_result\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m      8\u001B[0m \u001B[0mip\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mshow_image\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mimg_result\u001B[0m\u001B[1;33m,\u001B[0m \u001B[1;36m15\u001B[0m\u001B[1;33m,\u001B[0m \u001B[1;36m8\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m      9\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n",
+      "\u001B[1;32m<ipython-input-6-73eb3c82d76b>\u001B[0m in \u001B[0;36mregion_growing\u001B[1;34m(img, reg)\u001B[0m\n\u001B[0;32m    224\u001B[0m     \u001B[0mbottom_neighbors\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mborder_neighbors\u001B[0m\u001B[1;33m[\u001B[0m\u001B[1;36m3\u001B[0m\u001B[1;33m]\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m    225\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m--> 226\u001B[1;33m     \u001B[0mborder_distances\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mcalculate_distances\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mimg\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mreg\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mleft_neighbors\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mright_neighbors\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mtop_neighbors\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mbottom_neighbors\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m    227\u001B[0m     \u001B[0mmeans\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mborder_distances\u001B[0m\u001B[1;33m[\u001B[0m\u001B[1;36m0\u001B[0m\u001B[1;33m]\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m    228\u001B[0m     \u001B[0mleft_distances\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mborder_distances\u001B[0m\u001B[1;33m[\u001B[0m\u001B[1;36m1\u001B[0m\u001B[1;33m]\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n",
+      "\u001B[1;32m<ipython-input-6-73eb3c82d76b>\u001B[0m in \u001B[0;36mcalculate_distances\u001B[1;34m(img, reg, left_neighbors, right_neighbors, top_neighbors, bottom_neighbors)\u001B[0m\n\u001B[0;32m     91\u001B[0m     \u001B[0mmeans\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mmean_region\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mimg\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mreg\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     92\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m---> 93\u001B[1;33m     \u001B[0mleft_distances\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mcalculate_one_border_distances\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mmax_intensity\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mmeans\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mimg\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mleft_neighbors\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m     94\u001B[0m     \u001B[0mright_distances\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mcalculate_one_border_distances\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mmax_intensity\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mmeans\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mimg\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mright_neighbors\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     95\u001B[0m     \u001B[0mtop_distances\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mcalculate_one_border_distances\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mmax_intensity\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mmeans\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mimg\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mtop_neighbors\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n",
+      "\u001B[1;32m<ipython-input-6-73eb3c82d76b>\u001B[0m in \u001B[0;36mcalculate_one_border_distances\u001B[1;34m(max_intensity, means, img, one_border_neighbors)\u001B[0m\n\u001B[0;32m     83\u001B[0m     \u001B[0mone_border_distances\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mnp\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mones\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mimg\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mshape\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     84\u001B[0m     \u001B[0mposition_of_one_border_neighbors\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mnp\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mwhere\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mone_border_neighbors\u001B[0m \u001B[1;33m!=\u001B[0m \u001B[1;36m0\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m---> 85\u001B[1;33m     \u001B[0mone_border_distances\u001B[0m\u001B[1;33m[\u001B[0m\u001B[0mposition_of_one_border_neighbors\u001B[0m\u001B[1;33m[\u001B[0m\u001B[1;36m0\u001B[0m\u001B[1;33m]\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mposition_of_one_border_neighbors\u001B[0m\u001B[1;33m[\u001B[0m\u001B[1;36m1\u001B[0m\u001B[1;33m]\u001B[0m\u001B[1;33m]\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mcalculate_distance\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mmax_intensity\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mmeans\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mimg\u001B[0m\u001B[1;33m[\u001B[0m\u001B[0mposition_of_one_border_neighbors\u001B[0m\u001B[1;33m[\u001B[0m\u001B[1;36m0\u001B[0m\u001B[1;33m]\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mposition_of_one_border_neighbors\u001B[0m\u001B[1;33m[\u001B[0m\u001B[1;36m1\u001B[0m\u001B[1;33m]\u001B[0m\u001B[1;33m]\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mone_border_neighbors\u001B[0m\u001B[1;33m[\u001B[0m\u001B[0mposition_of_one_border_neighbors\u001B[0m\u001B[1;33m[\u001B[0m\u001B[1;36m0\u001B[0m\u001B[1;33m]\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mposition_of_one_border_neighbors\u001B[0m\u001B[1;33m[\u001B[0m\u001B[1;36m1\u001B[0m\u001B[1;33m]\u001B[0m\u001B[1;33m]\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m     86\u001B[0m     \u001B[1;32mreturn\u001B[0m \u001B[0mone_border_distances\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     87\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n",
+      "\u001B[1;32m<ipython-input-6-73eb3c82d76b>\u001B[0m in \u001B[0;36mcalculate_distance\u001B[1;34m(max_intensity, means, pixel_intensity, region_number)\u001B[0m\n\u001B[0;32m     99\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m    100\u001B[0m \u001B[1;32mdef\u001B[0m \u001B[0mcalculate_distance\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mmax_intensity\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mmeans\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mpixel_intensity\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mregion_number\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m:\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m--> 101\u001B[1;33m     \u001B[0mdist\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mnp\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mabs\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mpixel_intensity\u001B[0m \u001B[1;33m-\u001B[0m \u001B[0mmeans\u001B[0m\u001B[1;33m[\u001B[0m\u001B[0mint\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mregion_number\u001B[0m\u001B[1;33m)\u001B[0m \u001B[1;33m-\u001B[0m \u001B[1;36m1\u001B[0m\u001B[1;33m]\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m/\u001B[0m\u001B[0mmax_intensity\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m    102\u001B[0m     \u001B[1;32mreturn\u001B[0m \u001B[0mdist\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m    103\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n",
+      "\u001B[1;31mTypeError\u001B[0m: only size-1 arrays can be converted to Python scalars"
+     ]
+    }
+   ],
    "source": [
-    "image = sk.imread(\"../Data/N2DH-GOWT1/img/t01.tif\")  # load image\n",
-    "img_s = image[300:400, 300:500]\n",
+    "image = sk.imread(\"Data/N2DH-GOWT1/img/t01.tif\")  # load image\n",
+    "img_s = image[300:350, 450:500]\n",
     "img_result = sd.seeds(img_s, 0.4, 40)\n",
     "img_result = sd.seed_merging(img_result)\n",
-    "img_result = sd.decrease_region_number(img_result, 50)\n",
+    "#img_result = sd.decrease_region_number(img_result, 50)\n",
     "\n",
     "img_result = region_growing(img_s, img_result)\n",
     "ip.show_image(img_result, 15, 8)\n",
